anton_helm/templates/sonarqube_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
      release: v1
  template:
    metadata:
      labels:
        app: sonarqube
        release: v1
    spec:
      containers:
      - image: paperinik/rpi-sonarqube:latest   
        imagePullPolicy: Always
        name: sonarqube                
        ports:
        - containerPort: 9000
