anton_helm/templates/sonarqubedb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonardb
  namespace: sonarqube
spec:
  ports:
    - port: 5532
      targetPort: 5432
      protocol: TCP
  type: NodePort
  selector:
    app: sonardb
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
status:
  loadBalancer:
    ingress:
      - hostname: localhost
