anton_helm/templates/sonarqube_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sonarqube
  namespace: sonarqube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: sonarqube
spec:
  rules:
  - host: sonarqube.localhost
    http:
      paths:
        - path: /([ ]*)(.*)
          backend:
            serviceName: sonarqube
            servicePort: 9000
